# vitaliero

./: CMakeLists.txt  README.md  build-all.sh
src/game/: common.cpp  filesystem.cpp  gfx.cpp  gfx.hpp  main.cpp  settings.cpp  sfx.cpp  worm.hpp
src/game/gfx/: renderer.cpp
src/gvl/support/: platform.h
